[package]
name = "robust-wasm"
description = "Robust predicates WASM"
license = "MIT"
version = "0.1.1"
edition = "2021"
author = "Stephan Hügel <urschrei@gmail.com>"
repository = "https://github.com/urschrei/robust-wasm"
keywords = ["robust", "computational geometry", "predicates"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robust = "1.0.0"
wasm-bindgen = "0.2.84"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
